opam-version: "2.0"
synopsis: "Skeleton of a shared library for Melange and native OCaml/Reason"
description: """
Skeleton of a shared library for Melange and native OCaml/Reason
"""
maintainer: "Ahrefs"
authors: "Ahrefs"
license: "MIT"
homepage: "https://github.com/ahrefs/hello-native-bucklescript"
bug-reports: "https://github.com/ahrefs/hello-native-bucklescript/issues"
depends: [
  "ocaml" {= "5.1.0"}
  "dune" {>= "3.10"}
  "reason" {= "3.10.0"}
  "melange" {= "2.0.0"}
  "melange-atdgen-codec-runtime" {= "dev"}
  "atdgen" {= "2.10.0"}
  "ISO8601" {= "0.2.6"}
  "ocaml-lsp-server" {dev}
  "ocamlformat" {dev}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/ahrefs/hello-native-bucklescript.git"

pin-depends: [
  [ "melange-json.dev" "git+https://github.com/melange-community/melange-json.git#ac8a148" ]
  [ "melange-atdgen-codec-runtime.dev" "git+https://github.com/ahrefs/melange-atdgen-codec-runtime.git#d5f22fc" ]
]
