(library
 (name date_js)
 (libraries bs_atdgen_codec_runtime)
 (modes melange))

(rule
 (target tomorrow.ml)
 (action
  (copy# ../shared/tomorrow.ml tomorrow.ml)))

(rule
 (target yesterday.mli)
 (action
  (copy# ../shared/yesterday.mli yesterday.mli)))

(rule
 (target user_t.mli)
 (action
  (copy# ../shared/user_t.mli user_t.mli)))

(rule
 (target user_t.ml)
 (action
  (copy# ../shared/user_t.ml user_t.ml)))

(rule
 (target user_bs.ml)
 (action
  (copy# ../shared/user_bs.ml user_bs.ml)))
