(library
 (name date_native)
 (libraries atdgen-runtime tomorrow yojson unix ISO8601))

(copy_files# "../shared/yesterday.mli")

(rule
 (targets user_t.mli user_t.ml)
 (deps ../shared/user.atd)
 (action
  (run %{bin:atdgen} -t %{deps} -o ../native/user)))

(rule
 (target user_j.ml)
 (deps ../shared/user.atd)
 (action
  (run %{bin:atdgen} -j -j-std %{deps} -o ../native/user)))
